--- a/android-apps/fullapp/res/layout/activity_main.xml
+++ b/android-apps/fullapp/res/layout/activity_main.xml
@@ -6,12 +6,35 @@
     tools:context=".MainActivity"
     android:layout_margin="10dp" >
 
-    <Button
-        android:id="@+id/doorService"
+    <LinearLayout
+        android:id="@+id/logos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:gravity="center_vertical|center_horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="166dp"
+            android:layout_height="wrap_content"
+            android:paddingRight="20dp"
+            android:src="@drawable/logo_hsoa"
+            android:contentDescription="@string/hsoa_logo"/>
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="72dp"
+            android:layout_height="36dp"
+            android:src="@drawable/logo_soa"
+            android:contentDescription="@string/it_soa_logo"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/doorService"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/logos"
         android:text="@string/title_activity_door" />
 
     <Button
