--- a/android-apps/fullapp/res/menu/main.xml
+++ b/android-apps/fullapp/res/menu/main.xml
@@ -5,6 +5,6 @@
         android:id="@+id/menu_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:showAsAction="ifRoom|withText"
-        android:title="Preferences"/>
+        android:title="@string/menu_settings"/>
 
 </menu>
