--- a/android-apps/fullapp_logic/res/layout/activity_logic.xml
+++ b/android-apps/fullapp_logic/res/layout/activity_logic.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:visibility="gone"
         android:text="@string/button_logic_status" />
     
     <Button
